fixed headline and spacing

--- a/components/Card.module.css
+++ b/components/Card.module.css
@@ -1,7 +1,7 @@
 .card {
     display: flex;
     flex-direction: column;
-    border-radius: 25px;
+    border-radius: var(--br-11xl);
     overflow: hidden;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.04), 0 5px 18px rgba(0, 0, 0, 0.06), 0 24px 83px rgba(0, 0, 0, 0.1);
     background-color: #fff;
