--- a/pages/free-resources.module.css
+++ b/pages/free-resources.module.css
@@ -5,36 +5,66 @@
     overflow: hidden;
   }
 
-  .content {
-    position: relative;
-    width: 100%;
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    padding: 0 0 var(--padding-53xl);
-    gap: var(--gap-41xl);
-    padding-left: var(--padding-5xl);
-    padding-right: var(--padding-5xl);
-  }
-  
+.content {
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  padding: 0 0 var(--padding-53xl);
+  gap: var(--gap-41xl);
+  padding-left: var(--padding-5xl);
+  padding-right: var(--padding-5xl);
+  font-family: var(--font-inter);
+  color: var(--color-gray-200);
+  line-height: normal;
+}
+
+.title {
+  text-align: center;
+  font-size: var(--font-size-33xl);
+  font-weight: 800;
+}
+
+.blueWording {
+  color: var(--color-cornflowerblue);
+}
+
+.cardsContainer {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 45px;
+  justify-content: center;
+  width: 100%; /* Ensure the container width does not exceed 100% */
+}
+
+@media (min-width: 600px) {
   .cardsContainer {
-    display: flex;
-    flex-wrap: wrap;
     gap: 45px;
-    justify-content: center;
-    width: 100%; /* Ensure the container width does not exceed 100% */
   }
-  
-  @media (min-width: 600px) {
-    .cardsContainer {
-      gap: 45px;
-    }
+}
+
+@media (min-width: 900px) {
+  .cardsContainer {
+    max-width: 1200px;
   }
-  
-  @media (min-width: 900px) {
-    .cardsContainer {
-      max-width: 1200px;
-    }
+}
+
+@media screen and (max-width: 744px) {
+  .title {
+    font-size: var(--font-size-29xl);
+    align-self: stretch;
+    width: auto;
   }
+  .content {
+    gap: var(--gap-21xl);
+  }
+}
+@media screen and (max-width: 430px) {
+  .title {
+    font-size: var(--font-size-15xl);
+    line-height: 40px;
+  }
+}
